# package_downloader

./: .gitignore  Dockerfile  compose.yaml  pyproject.toml
source/: __init__.py  conf.py  index.md  intro.md
source/_static/css/: custom.css
source/_templates/: mybutton.html
source/locale/fr/LC_MESSAGES/: index.mo  index.po
src/: __init__.py  main.py
tests/: __init__.py  test_main.py
