[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["Brioche"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
fastapi = {extras = ["standard"], version = "^0.114.0"}


[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-toolbox = "^3.5.0"
sphinx-design = "^0.5.0"
sphinx-autopackagesummary = "^1.3"
myst-parser = "^2.0.0"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-copybutton = "^0.5.2"
sphinx-autobuild = "^2021.3.14"
sphinx-togglebutton = "^0.3.2"
sphinxcontrib-youtube = "^1.4.1"
sphinx-rtd-theme = "^2.0.0"
sphinx-book-theme = "^1.1.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.format.dependencies]
black = "^23.12.1"


[tool.poetry.group.lint.dependencies]
ruff = "^0.1.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"


[tool.poetry.group.build.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[poetry.virtualenvs]
create = false
prefer-active-python = true

[tool.black]
line-length = 80
preview = true
target-version = ['py311', 'py310']
include = 'src|tests'


[tool.ruff]
show-fixes = true
extend-select = ["ALL"]
ignore = ["D100", "D104", "D401", "D211", "D212", "RET505", "I001"]
line-length = 80

exclude = [
  "pyproject.toml",
  ".nox",
  ".vscode",
  ".venv",
  ".git",
  ".ipynb",
  "build",
  "dist",
  "docs",
  "notebooks",
]
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  # at least this three should be fine in tests:
  "S101", # asserts allowed in tests...
  "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  # The below are debateable
  "PLR2004", # Magic value used in comparison, ...
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
  "TRY003",
  "EM101",
]
